--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/LoTwT/ayingott.me#readme",
   "dependencies": {
+    "@vueuse/motion": "2.0.0-beta.18",
     "pinia": "^2.0.14"
   },
   "devDependencies": {
