chore: migrate to vitesse

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-node_modules
-*.log
+.DS_Store
+.vite-ssg-dist
+.vite-ssg-temp
+*.local
 dist
-.output
-.nuxt
-.env
+dist-ssr
+node_modules
+.idea/
+*.log
