--- a/package.json
+++ b/package.json
@@ -1,50 +1,75 @@
 {
-  "name": "pkg-name",
+  "type": "module",
+  "private": true,
   "packageManager": "pnpm@7.12.2",
   "scripts": {
-    "dev": "nuxi dev -o -p 3333",
-    "build": "nuxi build",
-    "generate": "nuxi generate",
-    "preview": "nuxi preview",
-    "start": "node .output/server/index.mjs",
-    "prettier": "prettier --write .",
+    "build": "vite-ssg build",
+    "dev": "vite --port 3333 --open",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "preview-https": "serve dist",
+    "test": "vitest",
+    "test:e2e": "cypress open",
+    "test:unit": "vitest",
+    "typecheck": "vue-tsc --noEmit",
     "prepare": "simple-git-hooks",
-    "up": "taze latest -I",
-    "nuxi:up": "nuxi upgrade --force"
+    "up": "taze major -I"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LoTwT/pkg-name.git"
-  },
-  "author": "LoTwT <709937065@qq.com>",
-  "bugs": {
-    "url": "https://github.com/LoTwT/pkg-name/issues"
-  },
-  "homepage": "https://github.com/LoTwT/pkg-name#readme",
   "dependencies": {
-    "pinia": "^2.0.22"
+    "@unocss/reset": "^0.45.23",
+    "@vueuse/core": "^9.3.0",
+    "@vueuse/head": "^0.7.12",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.22",
+    "vue": "^3.2.39",
+    "vue-demi": "^0.13.11",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/carbon": "^1.1.8",
-    "@iconify-json/twemoji": "^1.1.5",
-    "@nuxtjs/color-mode": "^3.1.6",
-    "@pinia/nuxt": "^0.4.2",
-    "@unocss/nuxt": "^0.45.22",
-    "@vueuse/nuxt": "^9.2.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@types/markdown-it-link-attributes": "^3.0.1",
+    "@types/nprogress": "^0.2.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/test-utils": "^2.0.2",
+    "critters": "^0.0.16",
+    "cross-env": "^7.0.3",
+    "cypress": "^10.8.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "https-localhost": "^4.7.1",
     "lint-staged": "^13.0.3",
-    "nuxt": "3.0.0-rc.11",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-shiki": "^0.5.1",
     "pnpm": "^7.12.2",
-    "prettier": "^2.7.1",
+    "shiki": "^0.11.1",
     "simple-git-hooks": "^2.8.0",
-    "taze": "^0.8.1",
-    "typescript": "^4.8.3"
+    "taze": "^0.8.2",
+    "typescript": "^4.8.3",
+    "unocss": "^0.45.23",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.7",
+    "vite": "^3.1.3",
+    "vite-plugin-inspect": "^0.7.3",
+    "vite-plugin-pages": "^0.26.0",
+    "vite-plugin-pwa": "^0.13.1",
+    "vite-plugin-vue-component-preview": "^0.3.2",
+    "vite-plugin-vue-layouts": "^0.7.0",
+    "vite-plugin-vue-markdown": "^0.22.1",
+    "vite-ssg": "^0.20.2",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.23.4",
+    "vue-tsc": "^0.40.13"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
   "lint-staged": {
-    "*": [
-      "prettier --write --ignore-unknown"
+    "*.{js,ts,jsx,tsx,vue,json,md,yaml,yml}": [
+      "eslint --fix"
     ]
   }
 }
