--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-node_modules
-*.log
+# valaxy
+fuse-list.json
+
+# vite-ssg
+.vite-ssg-dist
+.vite-ssg-temp
+
+temp/
+
+.DS_Store
+*.local
 dist
-.output
-.nuxt
-.env
+dist-ssr
+node_modules
+.idea/
+*.log
+
+components.d.ts
