--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,16 @@
 [build.environment]
-  NPM_FLAGS = "--version"
   NODE_VERSION = "16"
 
 [build]
   publish = "dist"
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/manifest.webmanifest"
+  [headers.values]
+    Content-Type = "application/manifest+json"
