--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,24 @@
-# valaxy
-fuse-list.json
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# vite-ssg
-.vite-ssg-dist
-.vite-ssg-temp
-
-temp/
-
-.DS_Store
-*.local
+node_modules
 dist
 dist-ssr
-node_modules
-.idea/
-*.log
+*.local
 
-components.d.ts
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
