--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,3 @@
 {
-  "recommendations": [
-    "antfu.iconify",
-    "antfu.unocss",
-    "csstools.postcss",
-    "dbaeumer.vscode-eslint",
-    "vue.volar",
-    "lokalise.i18n-ally",
-    "YunYouJun.valaxy"
-  ]
+  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
 }
