--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "up": "taze latest -I"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@ayingott/eslint-config": "^0.7.3",
@@ -26,6 +27,7 @@
     "taze": "^0.12.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
+    "vite-plugin-pages": "^0.31.0",
     "vue-tsc": "^1.8.5"
   },
   "simple-git-hooks": {
