--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "up": "taze latest -I"
   },
   "dependencies": {
+    "@unhead/vue": "^1.8.1",
+    "@vueuse/head": "^2.0.0",
+    "unplugin-vue-markdown": "^0.24.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -26,6 +29,7 @@
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.12.0",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vite-plugin-pages": "^0.31.0",
     "vue-tsc": "^1.8.5"
