--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "skipLibCheck": true
   },
   "references": [{ "path": "./tsconfig.node.json" }],
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["**/*.d.ts", "**/*.vue"]
 }
