--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.12.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vite-plugin-pages": "^0.31.0",
