--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@unhead/vue": "^1.8.1",
+    "@unocss/reset": "^0.57.1",
     "@vueuse/core": "^10.5.0",
     "@vueuse/head": "^2.0.0",
     "unplugin-vue-markdown": "^0.24.3",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@ayingott/eslint-config": "^0.7.3",
     "@ayingott/prettier-config": "^0.1.2",
+    "@iconify-json/carbon": "^1.1.21",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.52.0",
     "lint-staged": "^15.0.2",
@@ -31,6 +33,7 @@
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.12.0",
     "typescript": "^5.2.2",
+    "unocss": "^0.57.1",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
