--- a/package.json
+++ b/package.json
@@ -1,44 +1,33 @@
 {
   "name": "ayingott.me",
-  "version": "0.0.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "vue-tsc && vite build",
-    "dev": "vite",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
     "lint": "eslint .",
+    "postinstall": "nuxt prepare",
     "prepare": "simple-git-hooks",
     "prettier": "prettier --write .",
-    "preview": "vite preview",
+    "preview": "nuxt preview",
     "up": "taze latest -I"
   },
   "dependencies": {
-    "@unhead/vue": "^1.8.1",
-    "@unocss/reset": "^0.57.1",
-    "@vueuse/core": "^10.5.0",
-    "@vueuse/head": "^2.0.0",
-    "unplugin-vue-markdown": "^0.24.3",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.6.2",
-    "vue-router": "^4.2.5"
+    "@nuxt/content": "^2.9.0"
   },
   "devDependencies": {
-    "@ayingott/eslint-config": "^0.7.3",
+    "@ayingott/eslint-config": "^0.7.4",
     "@ayingott/prettier-config": "^0.1.2",
-    "@iconify-json/carbon": "^1.1.21",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.52.0",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
+    "@nuxt/devtools": "latest",
+    "eslint": "^8.54.0",
+    "lint-staged": "^15.1.0",
+    "nuxt": "^3.8.1",
+    "prettier": "^3.1.0",
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.12.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.57.1",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.5",
-    "vite-plugin-pages": "^0.31.0",
-    "vue-tsc": "^1.8.5"
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
