--- a/package.json
+++ b/package.json
@@ -1,23 +1,41 @@
 {
   "name": "ayingott.me",
   "type": "module",
+  "private": true,
   "scripts": {
-    "build": "vitepress build",
-    "dev": "vitepress dev",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
     "lint": "eslint .",
+    "postinstall": "nuxt prepare",
     "prepare": "simple-git-hooks",
     "prettier": "prettier --write .",
+    "preview": "nuxt preview",
     "up": "taze latest -I"
+  },
+  "dependencies": {
+    "@nuxt/content": "^2.9.0",
+    "@unocss/reset": "^0.57.7",
+    "daisyui": "3.9.4",
+    "unocss-preset-daisy": "^7.0.0"
   },
   "devDependencies": {
     "@ayingott/eslint-config": "^0.7.4",
     "@ayingott/prettier-config": "^0.1.2",
+    "@nuxt/devtools": "^1.0.3",
+    "@nuxtjs/i18n": "8.0.0-rc.5",
+    "@types/node": "^20.10.0",
+    "@unocss/nuxt": "^0.57.7",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/nuxt": "^10.6.1",
     "eslint": "^8.54.0",
     "lint-staged": "^15.1.0",
+    "nuxt": "^3.8.2",
     "prettier": "^3.1.0",
     "simple-git-hooks": "^2.9.0",
-    "taze": "^0.12.0",
-    "vitepress": "1.0.0-rc.29"
+    "taze": "^0.12.1",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
