--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@ayingott/eslint-config": "^0.7.4",
     "@ayingott/prettier-config": "^0.1.2",
+    "@iconify-json/carbon": "^1.1.23",
     "@nuxt/devtools": "^1.0.3",
     "@nuxtjs/i18n": "8.0.0-rc.5",
     "@types/node": "^20.10.0",
