--- a/package.json
+++ b/package.json
@@ -2,38 +2,38 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.1.1",
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -o",
     "generate": "nuxt generate",
-    "lint": "eslint .",
+    "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "prepare": "simple-git-hooks",
+    "up": "taze latest -I -f",
     "prettier": "prettier --write .",
-    "preview": "nuxt preview",
-    "up": "taze latest -I -f"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@unocss/reset": "^0.60.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@unocss/reset": "^0.63.4",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@ayingott/eslint-config": "^0.9.3",
-    "@ayingott/prettier-config": "^0.3.3",
-    "@iconify-json/line-md": "^1.1.37",
-    "@nuxtjs/color-mode": "^3.4.1",
-    "@unocss/nuxt": "^0.60.2",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "eslint": "^9.2.0",
-    "lint-staged": "^15.2.2",
-    "nuxt": "^3.11.2",
-    "prettier": "^3.2.5",
+    "@ayingott/eslint-config": "^1.4.7",
+    "@ayingott/prettier-config": "^1.2.7",
+    "@iconify-json/line-md": "^1.2.2",
+    "@nuxtjs/color-mode": "^3.5.1",
+    "@unocss/nuxt": "^0.63.4",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0",
+    "eslint": "^9.13.0",
+    "lint-staged": "^15.2.10",
+    "nuxt": "^3.13.2",
+    "prettier": "^3.3.3",
     "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.8",
-    "unocss": "^0.60.2"
+    "taze": "^0.17.2",
+    "unocss": "^0.63.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
