--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ayingott/eslint-config": "^2.0.1",
     "@ayingott/prettier-config": "^2.1.2",
     "@iconify-json/line-md": "^1.2.5",
+    "@iconify-json/qlementine-icons": "^1.2.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@unocss/eslint-plugin": "66.1.0-beta.5",
     "@unocss/nuxt": "^66.1.0-beta.5",
